--- a/res/layout/home_serverlist_item.xml
+++ b/res/layout/home_serverlist_item.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingLeft="10dp"
+    android:paddingTop="10dp"
+    android:paddingRight="10dp"
+    android:paddingBottom="10dp"
     android:orientation="vertical"
     tools:ignore="HardcodedText" >
 
@@ -10,28 +14,12 @@
         android:id="@+id/serverlist_item_name_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/serverlist_item_logo"
-        android:layout_toRightOf="@+id/serverlist_item_logo"
+        android:layout_alignParentLeft="true"
         android:ellipsize="end"
         android:lines="1"
         android:text="My awesome server with extras in the name hmm maybe too much"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold" />
-
-    <ImageView
-        android:id="@+id/serverlist_item_logo"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:adjustViewBounds="false"
-        android:contentDescription="@string/mta_logo"
-        android:src="@drawable/ic_multi_theft_auto_logo" />
 
     <TextView
         android:id="@+id/serverlist_item_ip_label"
@@ -43,27 +31,6 @@
         android:text="IP:"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/serverlist_item_ip_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/serverlist_item_ip_label"
-        android:layout_alignBottom="@+id/serverlist_item_ip_label"
-        android:layout_toRightOf="@+id/serverlist_item_ip_label"
-        android:text="178.178.178.178:22003"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/serverlist_item_status_value"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/serverlist_item_ip_value"
-        android:layout_alignBottom="@+id/serverlist_item_ip_value"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:text="Online"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/serverlist_item_status_label"
@@ -81,12 +48,43 @@
         android:id="@+id/serverlist_item_players_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/serverlist_item_name_value"
-        android:layout_below="@+id/serverlist_item_ip_label"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/serverlist_item_gamemode_label"
         android:layout_marginRight="5dp"
         android:text="Players:"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/serverlist_item_gamemode_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/serverlist_item_ip_label"
+        android:layout_marginRight="5dp"
+        android:text="Gamemode:"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/serverlist_item_gamemode_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/serverlist_item_gamemode_label"
+        android:layout_alignBottom="@+id/serverlist_item_gamemode_label"
+        android:layout_toRightOf="@+id/serverlist_item_gamemode_label"
+        android:text="race"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/serverlist_item_ip_value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/serverlist_item_ip_label"
+        android:layout_alignBottom="@+id/serverlist_item_ip_label"
+        android:layout_toRightOf="@+id/serverlist_item_ip_label"
+        android:text="178.178.178.178:22003"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:id="@+id/serverlist_item_players_value"
@@ -99,26 +97,14 @@
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
-        android:id="@+id/serverlist_item_gamemode_value"
+        android:id="@+id/serverlist_item_status_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/serverlist_item_players_label"
-        android:layout_alignBottom="@+id/serverlist_item_players_label"
+        android:layout_alignBaseline="@+id/serverlist_item_players_value"
+        android:layout_alignBottom="@+id/serverlist_item_players_value"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:text="race"
-        android:textAppearance="?android:attr/textAppearanceSmall" />
-
-    <TextView
-        android:id="@+id/serverlist_item_gamemode_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/serverlist_item_players_label"
-        android:layout_alignBottom="@+id/serverlist_item_players_label"
         android:layout_marginRight="5dp"
-        android:layout_toLeftOf="@+id/serverlist_item_gamemode_value"
-        android:text="Gamemode:"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textStyle="bold" />
+        android:text="Online"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
